# rtmp-stream

./: profiler.c  profiler.h
app/: build.gradle
app/src/androidTest/java/com/heculess/rtmppush/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  rtmp-audio-output.cpp  rtmp-audio-output.h  rtmp-circle-buffer.cpp  rtmp-circle-buffer.h  rtmp-defs.h  rtmp-encoder.cpp  rtmp-encoder.h  rtmp-ffmpeg-audio-encoders.cpp  rtmp-ffmpeg-compat.h  rtmp-ffmpeg-formats.h  rtmp-flv-packager.cpp  rtmp-flv-packager.h  rtmp-media-output.cpp  rtmp-output-base.cpp  rtmp-output-base.h  rtmp-output.cpp  rtmp-output.h  rtmp-push.cpp  rtmp-push.h  rtmp-serialize-byte.cpp  rtmp-serialize-byte.h  rtmp-stream.cpp  rtmp-stream.h  rtmp-struct.h  rtmp-video-output.cpp  rtmp-video-output.h  rtmp-x264.cpp
app/src/main/cpp/callback/: calldata.c  calldata.h  decl.c  proc.c  signal.c  signal.h
app/src/main/cpp/include/libavutil/: mathematics.h
app/src/main/cpp/librtmp/: rtmp.c  rtmp.h
app/src/main/cpp/util/: array-serializer.h  bmem.c  bmem.h  circlebuf.h  platform-nix.c  platform.c  threading.h
app/src/main/java/com/heculess/rtmppush/: AudioRecorder.java  MainActivity.java  RecordService.java  RtmpClient.java  ScreenRecorder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/heculess/rtmppush/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
